fix: incontext modal alignment changes

--- a/src/index.scss
+++ b/src/index.scss
@@ -251,6 +251,6 @@ header {
 
 @media only screen and (max-width: 767px) {
   body:not(.tox-force-desktop) .tox .tox-dialog {
-    align-self: flex-end;
+    align-self: center;
   }
 }
